# Daedalus

./: .gitignore  README.md  SECURITY.md  bench_vision.py  config.example.yaml  pyproject.toml
examples/: mac_click_test.yaml  mock_smoke.yaml  notepad_hello.yaml  notepad_hello_verified.yaml  open_file_explorer.yaml  open_finder_mac.yaml
frontend/: package-lock.json  package.json  tsconfig.json  tsup.config.ts
frontend/src/: app.tsx  index.tsx
frontend/src/bridge/: apply-event.ts  index.ts  json-rpc.ts  process-manager.ts  trace-loader.ts
frontend/src/components/: chat-feed.tsx  config-screen.tsx  confirm-dialog.tsx  feedback-display.tsx  goal-display.tsx  header-bar.tsx  phase-section.tsx  program-display.tsx  run-finished.tsx  scroll-list-math.ts  scroll-list.test.ts  scroll-list.tsx  status-bar.tsx  step-progress.tsx  thinking-block.tsx  tool-call-list.tsx  trace-browser.tsx  verdict-display.tsx
frontend/src/hooks/: use-elapsed-time.ts  use-keybindings.ts
frontend/src/store/: agent-store.ts  persistence.ts  types.ts
frontend/src/utils/: term.test.ts  term.ts  text.ts
scripts/: archive.sh  restore.sh  scroll_test.py  setup_vnc_host.md  verify_litellm.sh
services/grounding/: Dockerfile  engine.py  models.py  requirements.txt  run_native.sh  server.py
skills/: CORE.yaml
skills/.archive/click_mouse/: skill.py  spec.yaml
skills/.archive/monitor_text_region/: skill.py  spec.yaml
skills/.archive/paste_text/: spec.yaml
skills/.archive/timeguessr_play_round/: skill.py  spec.yaml
skills/assert_screen_contains/: skill.py  spec.yaml
skills/click_all/: skill.py  spec.yaml
skills/click_element/: __init__.py  skill.py  spec.yaml
skills/extract_text/: skill.py  spec.yaml
skills/locate_element/: skill.py  spec.yaml
skills/locate_elements/: skill.py  spec.yaml
skills/mouse/: skill.py  spec.yaml
skills/mouse/tests/: basic.json
skills/paste_text/: skill.py
skills/paste_text/tests/: basic.json
skills/populate_store_from_analysis/: skill.py  spec.yaml
skills/populate_store_from_analysis/tests/: basic.json
skills/scroll/: skill.py  spec.yaml
skills/solve_sudoku/: skill.py  spec.yaml
skills/solve_sudoku/tests/: basic.json  unsolvable.json
skills/store_query/: skill.py  spec.yaml
skills/tick_counter/: skill.py  spec.yaml
skills/type_shortcut/: skill.py  spec.yaml
skills/type_shortcut/tests/: basic.json
skills/type_text/: skill.py  spec.yaml
skills/type_text/tests/: basic.json
skills/type_text_secret/: skill.py  spec.yaml
skills/view_screen/: skill.py  spec.yaml
skills/vision_query/: skill.py  spec.yaml
skills/wait/: skill.py  spec.yaml
src/daedalus/: __init__.py  cli.py  main.py
tests/: conftest.py  test_actor_backend.py  test_assert_screen_contains.py  test_click_smoke.py  test_daemons.py  test_dsl.py  test_executor.py  test_implementor.py  test_librarian.py  test_loader.py  test_mock_backend.py  test_planner.py  test_registry.py  test_skills.py  test_spec.py  test_store_and_memory.py  test_teacher.py
(+59 files in other folders)
