[project]
name = "daedalus"
version = "0.0.1"
description = "Daedalus – a multistage learning system for computer control via composable skills."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Icarus AI" }]

dependencies = [
    # Schema/validation/config
    "pydantic>=2.7,<3",
    "pyyaml>=6.0,<7",
    "jsonschema>=4.21,<5",
    # CLI / UX
    "typer>=0.12,<1",
    "rich>=13.7,<14",
    "prompt-toolkit>=3.0,<4",
    # Imaging
    "pillow>=10.3,<12",
    "numpy>=1.26,<3",
    # Remote desktop backend (Phase 0)
    # vncdotool 1.3.0 is the latest as of Apr 2026 and is mature.
    "vncdotool>=1.3.0,<2",
    # LLM gateway. CRITICAL SECURITY NOTE:
    #   versions 1.82.7 and 1.82.8 of litellm were compromised in the
    #   March 24 2026 PyPI supply-chain attack (TeamPCP / sysmon backdoor).
    #   The first verified-clean post-incident release is 1.83.0 (Mar 30 2026)
    #   from LiteLLM's new CI/CD v2 pipeline. We pin to a known-good >=1.83.0.
    #   See scripts/verify_litellm.sh for IOC scanning.
    "litellm>=1.83.0,<1.90.0,!=1.82.7,!=1.82.8",
    # Bedrock client (used by litellm for AWS provider)
    "boto3>=1.34,<2",
    # HTTP client for grounding service
    "requests>=2.31,<3",
]

[project.optional-dependencies]
ocr = [
    # GLM-OCR service skill for text extraction.
    "transformers @ git+https://github.com/huggingface/transformers.git",
    "torch>=2.2",
    "accelerate>=0.28",
]

hotkey = ["pynput>=1.7,<2"]

dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.23,<1",
    "pytest-cov>=5.0,<7",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "types-PyYAML",
    "types-jsonschema",
]

[project.scripts]
daedalus = "daedalus.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daedalus"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle / pyflakes
    "I",             # isort
    "B",             # flake8-bugbear
    "UP",            # pyupgrade
    "SIM",           # flake8-simplify
    "RUF",           # ruff-specific
]
ignore = [
    "E501",          # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B"]
# Typer's idiomatic pattern is `arg: T = typer.Option(...)`, which trips B008.
"src/daedalus/cli.py" = ["B008", "UP007"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["build/", "dist/"]

[[tool.mypy.overrides]]
module = ["vncdotool.*", "litellm.*", "rapidocr_onnxruntime.*", "transformers.*", "torch.*", "accelerate.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
asyncio_mode = "auto"
markers = [
    "integration: requires a real VNC server",
    "llm: hits a real LLM provider",
]
